--- a/index.html
+++ b/index.html
@@ -7,27 +7,57 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <!-- HEADER/NAVIGATION -->
   <header>
     <div class="logo">
-      <img src="https://images.unsplash.com/photo-1518544802743-4d1b1dcd3d66?auto=format&fit=crop&w=80&q=80" alt="Mesoflix Logo">
+      <!-- Inline SVG Logo -->
+      <svg width="42" height="42" viewBox="0 0 64 64" fill="none" style="vertical-align:middle;margin-right:10px">
+        <rect x="2" y="2" width="60" height="60" rx="16" fill="#1AC888"/>
+        <text x="32" y="40" text-anchor="middle" font-family="Segoe UI, Arial,sans-serif" font-size="28" font-weight="bold" fill="#fff">M</text>
+        <circle cx="48" cy="16" r="6" fill="#21C98B" stroke="#fff" stroke-width="3"/>
+      </svg>
       <span>Mesoflix Ltd</span>
     </div>
     <nav class="navbar" id="navbar">
       <ul>
         <li class="dropdown">
-          <a href="#">Contact Us <span>&#9662;</span></a>
+          <a href="#" class="dropdown-toggle">Contact Us</a>
           <ul class="dropdown-menu">
-            <li><a href="mailto:support@mesoflix.com"><svg class="icon email" viewBox="0 0 20 20"><path d="M2,4 L18,4 L18,16 L2,16 L2,4 Z M2,4 L10,11 L18,4"/></svg>Email</a></li>
-            <li><a href="https://wa.me/123456789"><svg class="icon whatsapp" viewBox="0 0 20 20"><circle cx="10" cy="10" r="9"/><path d="M7,7 L13,13"/><path d="M13,7 L7,13"/></svg>WhatsApp</a></li>
-            <li><a href="tel:+123456789"><svg class="icon phone" viewBox="0 0 20 20"><path d="M2,2 L18,18"/><path d="M2,18 L18,2"/></svg>Phone</a></li>
-            <li><a href="https://instagram.com/mesoflix"><svg class="icon insta" viewBox="0 0 20 20"><circle cx="10" cy="10" r="8"/><circle cx="14" cy="6" r="1.5"/></svg>Instagram</a></li>
+            <li>
+              <a href="mailto:support@mesoflix.com">
+                <!-- Realistic Email SVG -->
+                <svg width="20" height="20" viewBox="0 0 48 48"><rect width="48" height="48" rx="8" fill="#ececec"/><path d="M6 12a4 4 0 0 1 4-4h28a4 4 0 0 1 4 4v24a4 4 0 0 1-4 4H10a4 4 0 0 1-4-4V12zm2 .82V36a2 2 0 0 0 2 2h28a2 2 0 0 0 2-2V12.82l-15 10.48a2 2 0 0 1-2.35 0L8 12.82zm32-2.08-16 11.2L8 10.74V12l16 11.2L40 12V10.74z" fill="#0091ea"/></svg>
+                Email
+              </a>
+            </li>
+            <li>
+              <a href="https://wa.me/123456789">
+                <!-- WhatsApp SVG logo -->
+                <svg width="20" height="20" viewBox="0 0 48 48"><circle cx="24" cy="24" r="22" fill="#25D366"/><path d="M24 14c-5.52 0-10 4.48-10 10a9.96 9.96 0 0 0 2.03 5.98L14 38l8.03-2.03A10 10 0 1 0 24 14zm0 18.5c-1.7 0-3.3-.5-4.67-1.37l-.33-.19-5.31 1.35 1.41-5.16-.21-.33A8.48 8.48 0 1 1 24 32.5z" fill="#fff"/><path d="M30.82 27.13l-2.9-.42a1.05 1.05 0 0 0-.88.3l-.7.71a8.58 8.58 0 0 1-4.05-4.05l.71-.7a1.05 1.05 0 0 0 .3-.88l-.42-2.9a1.05 1.05 0 0 0-1.05-.91c-2.06 0-3.73 1.67-3.73 3.73 0 5.24 4.26 9.5 9.5 9.5 2.06 0 3.73-1.67 3.73-3.73 0-.54-.37-.98-.91-1.05z" fill="#fff"/></svg>
+                WhatsApp
+              </a>
+            </li>
+            <li>
+              <a href="tel:+123456789">
+                <!-- Phone SVG -->
+                <svg width="20" height="20" viewBox="0 0 48 48"><rect width="48" height="48" rx="8" fill="#ececec"/><path d="M35.7 31.29l-4.4-2.2a3 3 0 0 0-3.35.67l-1.17 1.17a17.08 17.08 0 0 1-7.34-7.34l1.17-1.17A3 3 0 0 0 18.9 16.7l-2.2-4.4A3 3 0 0 0 13 11H11a2 2 0 0 0-2 2c0 14.02 11.98 26 26 26a2 2 0 0 0 2-2v-2a3 3 0 0 0-1.29-2.3z" fill="#009688"/></svg>
+                Phone
+              </a>
+            </li>
+            <li>
+              <a href="https://instagram.com/mesoflix">
+                <!-- Instagram SVG -->
+                <svg width="20" height="20" viewBox="0 0 48 48"><radialGradient id="insta" cx="24" cy="24" r="24" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#fd5"/><stop offset="1" stop-color="#c837ab"/></radialGradient><rect width="48" height="48" rx="12" fill="url(#insta)"/><circle cx="24" cy="24" r="9" fill="#fff"/><circle cx="24" cy="24" r="7" fill="#c837ab"/><circle cx="34" cy="14" r="2" fill="#fff"/></svg>
+                Instagram
+              </a>
+            </li>
           </ul>
         </li>
         <li><a href="documentation.html">Docs</a></li>
         <li><a href="products.html">Our Products</a></li>
         <li><a href="#about">About Us</a></li>
         <li class="dropdown">
-          <a href="#">Socials <span>&#9662;</span></a>
+          <a href="#" class="dropdown-toggle">Socials</a>
           <ul class="dropdown-menu">
             <li><a href="https://twitter.com/mesoflix">Twitter</a></li>
             <li><a href="https://facebook.com/mesoflix">Facebook</a></li>
@@ -36,19 +66,34 @@
         </li>
       </ul>
     </nav>
-    <button class="menu-btn" id="menu-btn">
+    <button class="menu-btn" id="menu-btn" aria-label="Open menu">
       <svg width="32" height="32"><rect width="32" height="5"/><rect y="13" width="32" height="5"/><rect y="26" width="32" height="5"/></svg>
     </button>
   </header>
 
   <aside class="sidebar" id="sidebar">
-    <button class="close-btn" id="close-btn">&times;</button>
+    <button class="close-btn" id="close-btn" aria-label="Close menu">&times;</button>
     <ul>
-      <li><a href="#">Contact Us</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle">Contact Us</a>
+        <ul class="dropdown-menu">
+          <li><a href="mailto:support@mesoflix.com">Email</a></li>
+          <li><a href="https://wa.me/123456789">WhatsApp</a></li>
+          <li><a href="tel:+123456789">Phone</a></li>
+          <li><a href="https://instagram.com/mesoflix">Instagram</a></li>
+        </ul>
+      </li>
       <li><a href="documentation.html">Docs</a></li>
       <li><a href="products.html">Our Products</a></li>
       <li><a href="#about">About Us</a></li>
-      <li><a href="#">Socials</a></li>
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle">Socials</a>
+        <ul class="dropdown-menu">
+          <li><a href="https://twitter.com/mesoflix">Twitter</a></li>
+          <li><a href="https://facebook.com/mesoflix">Facebook</a></li>
+          <li><a href="https://linkedin.com/company/mesoflix">LinkedIn</a></li>
+        </ul>
+      </li>
     </ul>
   </aside>
 
@@ -108,13 +153,52 @@
       </p>
     </section>
 
+    <!-- New Team Section -->
+    <section class="team" id="team">
+      <h2>Meet Our Team</h2>
+      <div class="team-list">
+        <div class="team-member">
+          <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Team Lead">
+          <h3>Michael K.</h3>
+          <p>Founder & Lead Developer</p>
+        </div>
+        <div class="team-member">
+          <img src="https://randomuser.me/api/portraits/women/44.jpg" alt="Support">
+          <h3>Sarah W.</h3>
+          <p>Client Support & QA</p>
+        </div>
+        <div class="team-member">
+          <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="Trading Specialist">
+          <h3>John D.</h3>
+          <p>Trading Bot Specialist</p>
+        </div>
+        <div class="team-member">
+          <img src="https://randomuser.me/api/portraits/women/68.jpg" alt="UI Designer">
+          <h3>Emily R.</h3>
+          <p>UI/UX Designer</p>
+        </div>
+      </div>
+    </section>
+
     <section class="contact" id="contact">
       <h2>Contact Us</h2>
       <div class="contact-options">
-        <a href="mailto:support@mesoflix.com"><svg class="icon email" viewBox="0 0 20 20"><path d="M2,4 L18,4 L18,16 L2,16 L2,4 Z M2,4 L10,11 L18,4"/></svg>Email</a>
-        <a href="https://wa.me/123456789"><svg class="icon whatsapp" viewBox="0 0 20 20"><circle cx="10" cy="10" r="9"/><path d="M7,7 L13,13"/><path d="M13,7 L7,13"/></svg>WhatsApp</a>
-        <a href="tel:+123456789"><svg class="icon phone" viewBox="0 0 20 20"><path d="M2,2 L18,18"/><path d="M2,18 L18,2"/></svg>Phone</a>
-        <a href="https://instagram.com/mesoflix"><svg class="icon insta" viewBox="0 0 20 20"><circle cx="10" cy="10" r="8"/><circle cx="14" cy="6" r="1.5"/></svg>Instagram</a>
+        <a href="mailto:support@mesoflix.com">
+          <svg width="24" height="24" viewBox="0 0 48 48"><rect width="48" height="48" rx="8" fill="#ececec"/><path d="M6 12a4 4 0 0 1 4-4h28a4 4 0 0 1 4 4v24a4 4 0 0 1-4 4H10a4 4 0 0 1-4-4V12zm2 .82V36a2 2 0 0 0 2 2h28a2 2 0 0 0 2-2V12.82l-15 10.48a2 2 0 0 1-2.35 0L8 12.82zm32-2.08-16 11.2L8 10.74V12l16 11.2L40 12V10.74z" fill="#0091ea"/></svg>
+          Email
+        </a>
+        <a href="https://wa.me/123456789">
+          <svg width="24" height="24" viewBox="0 0 48 48"><circle cx="24" cy="24" r="22" fill="#25D366"/><path d="M24 14c-5.52 0-10 4.48-10 10a9.96 9.96 0 0 0 2.03 5.98L14 38l8.03-2.03A10 10 0 1 0 24 14zm0 18.5c-1.7 0-3.3-.5-4.67-1.37l-.33-.19-5.31 1.35 1.41-5.16-.21-.33A8.48 8.48 0 1 1 24 32.5z" fill="#fff"/><path d="M30.82 27.13l-2.9-.42a1.05 1.05 0 0 0-.88.3l-.7.71a8.58 8.58 0 0 1-4.05-4.05l.71-.7a1.05 1.05 0 0 0 .3-.88l-.42-2.9a1.05 1.05 0 0 0-1.05-.91c-2.06 0-3.73 1.67-3.73 3.73 0 5.24 4.26 9.5 9.5 9.5 2.06 0 3.73-1.67 3.73-3.73 0-.54-.37-.98-.91-1.05z" fill="#fff"/></svg>
+          WhatsApp
+        </a>
+        <a href="tel:+123456789">
+          <svg width="24" height="24" viewBox="0 0 48 48"><rect width="48" height="48" rx="8" fill="#ececec"/><path d="M35.7 31.29l-4.4-2.2a3 3 0 0 0-3.35.67l-1.17 1.17a17.08 17.08 0 0 1-7.34-7.34l1.17-1.17A3 3 0 0 0 18.9 16.7l-2.2-4.4A3 3 0 0 0 13 11H11a2 2 0 0 0-2 2c0 14.02 11.98 26 26 26a2 2 0 0 0 2-2v-2a3 3 0 0 0-1.29-2.3z" fill="#009688"/></svg>
+          Phone
+        </a>
+        <a href="https://instagram.com/mesoflix">
+          <svg width="24" height="24" viewBox="0 0 48 48"><radialGradient id="insta2" cx="24" cy="24" r="24" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#fd5"/><stop offset="1" stop-color="#c837ab"/></radialGradient><rect width="48" height="48" rx="12" fill="url(#insta2)"/><circle cx="24" cy="24" r="9" fill="#fff"/><circle cx="24" cy="24" r="7" fill="#c837ab"/><circle cx="34" cy="14" r="2" fill="#fff"/></svg>
+          Instagram
+        </a>
       </div>
     </section>
   </main>
